Second iteration of Schedule tab

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     <div class="col-1"></div>
                     <div class="col-5">
                         <img class="img-fluid" src="/images/craven-farm-2.jpg">
-                        <p class="h3">Wedding Ceremony + Reception</p>
-                        <p>Craven Farm<br>13817 Short School Rd<br>Snohomish, WA 98290</p>
+                        <h3>Wedding Ceremony + Reception</h3>
+                        <h4>Craven Farm<br>13817 Short School Rd<br>Snohomish, WA 98290</p>
                     </div>
                     <div class="col-5">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10705.387196100939!2d-122.0751266!3d47.8716125!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1c51c954ea3f5599!2sCraven%20Farm!5e0!3m2!1sen!2sus!4v1652152180307!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -89,30 +89,28 @@
                 <div class="row">
                     <div class="col">
                         <p class="h1">Wedding</p>
-                        <p>Saturday, July 8th, 2023</p>
-                        <p>4:00PM - 10:00PM</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img width="200px" src="/images/heart-icon.png">
+                        <img width="100px" src="/images/heart-icon.png">
                         <p class="h1">Ceremony</p>
-                        <p>4:00 - 4:30PM</p>
+                        <p>4:00 - 4:30 P.M.</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img width="200px" src="/images/wine-icon.png">
-                        <p class="h1">Cocktail Hour</p>
-                        <p>4:30PM - 6:00PM</p>
-                        <p>Grazing tables + cocktails</p>
+                        <img width="100px" src="/images/camera-icon.png">
+                        <p class="h1">Social Hour</p>
+                        <p>4:30 P.M. - 6:00 P.M.</p>
+                        <p>Socializing and photos</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img width="200px" src="/images/cake-icon.png">
+                        <img width="100px" src="/images/cake-icon.png">
                         <p class="h1">Reception</p>
-                        <p>6:00PM - 10:00PM</p>
+                        <p>6:00 P.M. - 10:00 P.M.</p>
                         <p>Dinner, dancing, music, games, and dessert!</p>
                     </div>
                 </div>
