Second interation of wedding party tab

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <div class="col-6">
                             <h1>Matthew Francisco</h1>
                             <h2>Best Man</h2>
-                            <p>Chris is my older and only brother—he has always been like a father figure to me. He owns and operates an awesome ski shop on Lake Tahoe with his wife Jenny (they’re expecting their first baby later this year!). Every summer, we do a week-long camping trip in the woods that we look forward to all year.</p>
+                            <p>Matt and I grew up togther as your typical brother duo, and I wouldn't have wanted it any other way. As the older one, I haven't always been the nicest bigger brother and we certainly don't always get along, but I always know he's got my back and will support me through thick and thin.</p>
                         </div>
                         <div class="col-4">
                             <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/ChrisMassey.jpg">
@@ -178,9 +178,9 @@
                     <div class="row">
                         <div class="col-1"></div>
                         <div class="col-6">
-                            <h1>x y</h1>
+                            <h1>Keegan Griffee</h1>
                             <h2>Groomsman</h2>
-                            <p>Chris is my older and only brother—he has always been like a father figure to me. He owns and operates an awesome ski shop on Lake Tahoe with his wife Jenny (they’re expecting their first baby later this year!). Every summer, we do a week-long camping trip in the woods that we look forward to all year.</p>
+                            <p>Keegan and I first met in middle school, but our friendship only really flourished in high school as part of the "Goon squad". Keegan and our group of close buddies had countless gaming sessions in League of Legends, and as we went to college, we were freshman roommates, then housemates</p>
                         </div>
                         <div class="col-4">
                             <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/MatthewCraft.jpg">
@@ -190,9 +190,9 @@
                     <div class="row">
                         <div class="col-1"></div>
                         <div class="col-6">
-                            <h1>x y</h1>
+                            <h1>Neal Brown</h1>
                             <h2>Groomsman</h2>
-                            <p>Chris is my older and only brother—he has always been like a father figure to me. He owns and operates an awesome ski shop on Lake Tahoe with his wife Jenny (they’re expecting their first baby later this year!). Every summer, we do a week-long camping trip in the woods that we look forward to all year.</p>
+                            <p>I met Neal in high school and we started off playing Magic the Gathering together. We quickly became friends at the start of college, being the other housemates on our basement floor.</p>
                         </div>
                         <div class="col-4">
                             <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/BenjaminHolland.jpg">
