Add flowers img beneath each secondary heading

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         <div class="tab-pane fade" id="nav-registry" role="tabpanel" aria-labelledby="nav-registry-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Registry</h1>
+                <img width="250px" src="/images/flower-boquet-transparent.png">
             </div>
         </div>
         <div class="tab-pane fade" id="nav-wedding-party" role="tabpanel" aria-labelledby="nav-wedding-party-tab">
@@ -205,6 +206,7 @@
         <div class="tab-pane fade" id="nav-photos" role="tabpanel" aria-labelledby="nav-photos-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Photos</h1>
+                <img width="250px" src="/images/flower-boquet-transparent.png">
                 <div class="row">
                     <div class="col">
                         <a data-fslightbox href="/images/images-tab/1.JPG">
@@ -255,6 +257,7 @@
         <div class="tab-pane fade" id="nav-questions" role="tabpanel" aria-labelledby="nav-questions-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Questions</h1>
+                <img width="250px" src="/images/flower-boquet-transparent.png">
                 <div class="row">
                     <div class="col-2"></div>
                     <div class="col-4 border-right">Question<br><span>When should I RSVP by?</span></div>
@@ -308,6 +311,7 @@
         <div class="tab-pane fade" id="nav-rsvp" role="tabpanel" aria-labelledby="nav-rsvp-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">RSVP</h1>
+                <img width="250px" src="/images/flower-boquet-transparent.png">
                 <p>If you're responding for you and your family or a guest,<br>you'll be able to RSVP for your entire group.</p>
                 <div class="alert alert-info d-none" role="alert"></div>
                 <form class="form-inline centered">
