Second iteration of questions tab

--- a/index.html
+++ b/index.html
@@ -260,50 +260,50 @@
                 <img width="250px" src="/images/flower-boquet-transparent.png">
                 <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right">Question<br><span>When should I RSVP by?</span></div>
-                    <div class="col-4">Answer<br>Please RSVP no later than 6/3/2023. If you are unable to respond by then we will assume you can't make it.</div>
+                    <div class="col-4 border-right"><span>When should I RSVP by?</span></div>
+                    <div class="col-4">Please RSVP no later than 6/3/2023. If you are unable to respond by then we will assume you can't make it.</div>
                     <div class="col-2"></div>
                 </div>
                  <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right">Question<br><span>Are you registered? Where?</span></div>
-                    <div class="col-4">Answer<br>Check out the registry tab on this wedding website! Otherwise, feel free to look up our registries on Amazon under either of our names.</div>
+                    <div class="col-4 border-right"><span>Are you registered? Where?</span></div>
+                    <div class="col-4">Check out the registry tab on this wedding website! Otherwise, feel free to look up our registries on Amazon under either of our names.</div>
                     <div class="col-2"></div>
                 </div>
                  <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right">Question<br><span>Do you provide hotel accommodations?</span></div>
-                    <div class="col-4">Answer<br>Yes. For your convenience, a block of rooms has been reserved at [name of hotel] in [city]. When calling to make your reservation, please mention the Ikeda & Francisco wedding in order to receive a discounted rate. Please call [hotel’s phone number] to make your reservation.</div>
+                    <div class="col-4 border-right"><span>Do you provide hotel accommodations?</span></div>
+                    <div class="col-4">Yes. For your convenience, a block of rooms has been reserved at [name of hotel] in [city]. When calling to make your reservation, please mention the Ikeda & Francisco wedding in order to receive a discounted rate. Please call [hotel’s phone number] to make your reservation.</div>
                     <div class="col-2"></div>
                 </div>
                  <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right">Question<br><span>Is there a dress code?</span></div>
-                    <div class="col-4">Answer<br>Please wear something comfortable! While this isn’t a casual attire event, it may still get slightly chilly at night, so you may want to bring a lightweight jacket. Ladies, the venue does have grass and other unstable terrain, so stiletto heels may not be the best choice of footwear. </div>
+                    <div class="col-4 border-right"><span>Is there a dress code?</span></div>
+                    <div class="col-4">Please wear something comfortable! While this isn’t a casual attire event, it may still get slightly chilly at night, so you may want to bring a lightweight jacket. Ladies, the venue does have grass and other unstable terrain, so stiletto heels may not be the best choice of footwear. </div>
                     <div class="col-2"></div>
                 </div>
                  <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right">Question<br><span>Are kids welcome?</span></div>
-                    <div class="col-4">Answer<br>If they are included on the invitation, then yes, of course! Please note that our wedding can only accommodate kids from our families, so thank you for understanding. Also, there is a considerable amount of space to play on grass and wood chips, so bringing a change of clothes for them might be advisable. </div>
+                    <div class="col-4 border-right"><span>Are kids welcome?</span></div>
+                    <div class="col-4">If they are included on the invitation, then yes, of course! Please note that our wedding can only accommodate kids from our families, so thank you for understanding. Also, there is a considerable amount of space to play on grass and wood chips, so bringing a change of clothes for them might be advisable. </div>
                     <div class="col-2"></div>
                 </div>
                  <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right">Question<br><span>Do I need to wear a mask?</span></div>
-                    <div class="col-4">Answer<br>You do not need to wear one, but you may if you wish. </div>
+                    <div class="col-4 border-right"><span>Do I need to wear a mask?</span></div>
+                    <div class="col-4">You do not need to wear one, but you may if you wish. </div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right">Question<br><span>What time should I arrive at the ceremony?</span></div>
-                    <div class="col-4">Answer<br>The ceremony begins at 4:30 p.m. Please arrive by 4:15pm to ensure you get a good seat!</div>
+                    <div class="col-4 border-right"><span>What time should I arrive at the ceremony?</span></div>
+                    <div class="col-4">The ceremony begins at 4:30 p.m. Please arrive by 4:15pm to ensure you get a good seat!</div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right">Question<br><span>I have a dietary restriction/food preference. Can you accommodate me?</span></div>
-                    <div class="col-4">Answer<br>Please make sure to indicate your dietary needs when you RSVP and we will do our best to work with our caterer to make sure there is something available for you at the reception.</div>
+                    <div class="col-4 border-right"><span>I have a dietary restriction/food preference. Can you accommodate me?</span></div>
+                    <div class="col-4">Please make sure to indicate your dietary needs when you RSVP and we will do our best to work with our caterer to make sure there is something available for you at the reception.</div>
                     <div class="col-2"></div>
                 </div>
             </div>
