Fix container heights

--- a/index.html
+++ b/index.html
@@ -120,6 +120,29 @@
             <div class="container text-center">
                 <h1 class="heading-secondary">Registry</h1>
                 <img width="250px" src="/images/flower-boquet-transparent.png">
+                <div class="row">
+                    <div class="col-sm-6 col-md-4 col-xl-3 col-xxxl-2">
+                        <a href="/" class="d-flex align-self-center justify-content-center" label="Amazon registry" aria-label="Amazon registry">
+                            <div class="align-self-center ms-2">
+                                <img class="mw-100 rounded full-logo" src="/images/amazon-registry.png" alt="Amazon registry">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4 col-xl-3 col-xxxl-2">
+                        <a href="/" class="d-flex align-self-center justify-content-center" label="Amazon registry" aria-label="Amazon registry">
+                            <div class="align-self-center ms-2">
+                                <img class="mw-100 rounded full-logo" src="/images/amazon-registry.png" alt="Amazon registry">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4 col-xl-3 col-xxxl-2">
+                        <a href="/" class="d-flex align-self-center justify-content-center" label="Amazon registry" aria-label="Amazon registry">
+                            <div class="align-self-center ms-2">
+                                <img class="mw-100 rounded full-logo" src="/images/amazon-registry.png" alt="Amazon registry">
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="tab-pane fade" id="nav-wedding-party" role="tabpanel" aria-labelledby="nav-wedding-party-tab">
