--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col reveal">
                         <img width="100px" src="/images/heart-icon.png">
                         <p class="h1">Ceremony</p>
                         <p>4:00 - 4:30 P.M.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col reveal">
                         <img width="100px" src="/images/camera-icon.png">
                         <p class="h1">Social Hour</p>
                         <p>4:30 P.M. - 6:00 P.M.</p>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col reveal">
                         <img width="100px" src="/images/cake-icon.png">
                         <p class="h1">Reception</p>
                         <p>6:00 P.M. - 10:00 P.M.</p>
@@ -128,20 +128,6 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-xl-3 col-xxxl-2">
-                        <a href="/" class="d-flex align-self-center justify-content-center" label="Amazon registry" aria-label="Amazon registry">
-                            <div class="align-self-center ms-2">
-                                <img class="mw-100 rounded full-logo" src="/images/amazon-registry.png" alt="Amazon registry">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-md-4 col-xl-3 col-xxxl-2">
-                        <a href="/" class="d-flex align-self-center justify-content-center" label="Amazon registry" aria-label="Amazon registry">
-                            <div class="align-self-center ms-2">
-                                <img class="mw-100 rounded full-logo" src="/images/amazon-registry.png" alt="Amazon registry">
-                            </div>
-                        </a>
-                    </div>
                 </div>
             </div>
         </div>
@@ -150,7 +136,7 @@
                 <h1 class="heading-secondary">Wedding Party</h1>
                 <img width="250px" src="/images/flower-boquet-transparent.png">
                 <div class="container">
-                    <div class="row">
+                    <div class="row reveal">
                         <div class="col-1"></div>
                         <div class="col-4">
                             <img class="img-fluid rounded-circle" src="images/wedding-party-tab/jessy.jpg">
@@ -162,7 +148,7 @@
                         </div>
                         <div class="col-1"></div>
                     </div>
-                    <div class="row">
+                    <div class="row reveal">
                         <div class="col-1"></div>
                         <div class="col-4">
                             <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/HaleyClarke.jpg">
@@ -174,7 +160,7 @@
                         </div>
                         <div class="col-1"></div>
                     </div>
-                    <div class="row">
+                    <div class="row reveal">
                         <div class="col-1"></div>
                         <div class="col-4">
                             <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/DianaHuang.jpg">
@@ -187,7 +173,7 @@
                         <div class="col-1"></div>
                     </div>
                     <hr>
-                    <div class="row">
+                    <div class="row reveal">
                         <div class="col-1"></div>
                         <div class="col-6">
                             <h1>Matthew Francisco</h1>
@@ -199,7 +185,7 @@
                         </div>
                         <div class="col-1"></div>
                     </div>
-                    <div class="row">
+                    <div class="row reveal">
                         <div class="col-1"></div>
                         <div class="col-6">
                             <h1>Keegan Griffee</h1>
@@ -211,7 +197,7 @@
                         </div>
                         <div class="col-1"></div>
                     </div>
-                    <div class="row">
+                    <div class="row reveal">
                         <div class="col-1"></div>
                         <div class="col-6">
                             <h1>Neal Brown</h1>
