Updates based on discussion with J

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     </nav>
     <div class="tab-content">
         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-            <div class="jumbotron home-page-hero has-image"></div>
+            <!--<div class="jumbotron home-page-hero has-image"></div>-->
+            <img class="d-block mx-auto" src="/images/banner.jpg" width=1200>
             <h2 class="heading-secondary text-center mt-3">Our Story</h2>
             <div class="timeline">
                 <div class="timeline-container left reveal">
@@ -120,6 +121,7 @@
             <div class="container text-center">
                 <h1 class="heading-secondary">Registry</h1>
                 <img width="250px" src="/images/flower-boquet-transparent.png">
+                <p>We're still putting together our registry list, but we appreciate you checking in!<br>Please stay tuned for more registry details. Thank you!</p>
                 <div class="row">
                     <div class="col-sm-6 col-md-4 col-xl-3 col-xxxl-2">
                         <a href="/" class="d-flex align-self-center justify-content-center" label="Amazon registry" aria-label="Amazon registry">
@@ -281,14 +283,10 @@
                 </div>
                  <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right"><span>Do you provide hotel accommodations?</span></div>
-                    <div class="col-4">Yes. For your convenience, a block of rooms has been reserved at [name of hotel] in [city]. When calling to make your reservation, please mention the Ikeda & Francisco wedding in order to receive a discounted rate. Please call [hotel’s phone number] to make your reservation.</div>
-                    <div class="col-2"></div>
-                </div>
-                 <div class="row">
-                    <div class="col-2"></div>
                     <div class="col-4 border-right"><span>Is there a dress code?</span></div>
-                    <div class="col-4">Please wear something comfortable! While this isn’t a casual attire event, it may still get slightly chilly at night, so you may want to bring a lightweight jacket. Ladies, the venue does have grass and other unstable terrain, so stiletto heels may not be the best choice of footwear. </div>
+                    <div class="col-4">
+                    We'd love our guests to sport comfortable semi-formal attire. Ladies can wear a nice dress, and the men can wear dress shirt/pants (tie optional). Ladies, the venue does have grass and other unstable terrain, so stiletto heels may not be the best choice of footwear.
+                    </div>
                     <div class="col-2"></div>
                 </div>
                  <div class="row">
@@ -301,6 +299,12 @@
                     <div class="col-2"></div>
                     <div class="col-4 border-right"><span>Do I need to wear a mask?</span></div>
                     <div class="col-4">You do not need to wear one, but you may if you wish. </div>
+                    <div class="col-2"></div>
+                </div>
+                <div class="row">
+                    <div class="col-2"></div>
+                    <div class="col-4 border-right"><span>Is there parking for the ceremony and reception?</span></div>
+                    <div class="col-4">Yes, there is plenty of parking on site at Craven Farm.</div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row">
