--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <div class="col-6">
                             <h1>Angelita Hernandez</h1>
                             <h2>Bridesmaid</h2>
-                            <p>I also met Angelita at the end of 8th grade along with Jonathan. Her bubbly personality and sense of humor made her - and still makes her - easy to get along with and fun to be around. She is the one responsible for dragging me into the world of K-pop in high school, which consumed my life for the next so many years. Now, she is my talented crafting and baking buddy who can literally make anything. I’m proud to call her one of my best friends and my bridesmaid!</p>
+                            <p>I met Angelita at the end of 8th grade along with Jonathan. Her bubbly personality and sense of humor made her - and still makes her - easy to get along with and fun to be around. She is the one responsible for dragging me into the world of K-pop in high school, which consumed my life for the next so many years. Now, she is my talented crafting and baking buddy who can literally make anything. I’m proud to call her one of my best friends and my bridesmaid!</p>
                         </div>
                         <div class="col-1"></div>
                     </div>
