Update groomsmans photos

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col reveal">
+                    <div class="col">
                         <img width="100px" src="/images/heart-icon.png">
                         <p class="h1">Ceremony</p>
                         <p>4:00 - 4:30 P.M.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col reveal">
+                    <div class="col">
                         <img width="100px" src="/images/camera-icon.png">
                         <p class="h1">Social Hour</p>
                         <p>4:30 P.M. - 6:00 P.M.</p>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col reveal">
+                    <div class="col">
                         <img width="100px" src="/images/cake-icon.png">
                         <p class="h1">Reception</p>
                         <p>6:00 P.M. - 10:00 P.M.</p>
@@ -183,7 +183,7 @@
                             <p>Matt and I grew up togther as your typical brother duo, and I wouldn't have wanted it any other way. As the older one, I haven't always been the nicest bigger brother and we certainly don't always get along, but I always know he's got my back and will support me through thick and thin.</p>
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/ChrisMassey.jpg">
+                            <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/matt.jpg">
                         </div>
                         <div class="col-1"></div>
                     </div>
@@ -195,7 +195,7 @@
                             <p>Keegan and I first met in middle school, but our friendship only really flourished in high school as part of the "Goon squad". Keegan and our group of close buddies had countless gaming sessions in League of Legends, and as we went to college, we were freshman roommates, then housemates</p>
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/MatthewCraft.jpg">
+                            <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/keegan.jpg">
                         </div>
                         <div class="col-1"></div>
                     </div>
@@ -207,7 +207,7 @@
                             <p>I met Neal in high school and we started off playing Magic the Gathering together. We quickly became friends at the start of college, being the other housemates on our basement floor.</p>
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/BenjaminHolland.jpg">
+                            <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/neal.jpg">
                         </div>
                         <div class="col-1"></div>
                     </div>
