Add wedding party photos and update text

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="row reveal">
                         <div class="col-1"></div>
                         <div class="col-4">
-                            <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/HaleyClarke.jpg">
+                            <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/angelita.jpg">
                         </div>
                         <div class="col-6">
                             <h1>Angelita Hernandez</h1>
@@ -165,7 +165,7 @@
                     <div class="row reveal">
                         <div class="col-1"></div>
                         <div class="col-4">
-                            <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/DianaHuang.jpg">
+                            <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/johnathan.jpg">
                         </div>
                         <div class="col-6">
                             <h1>Jonathan Ieng</h1>
@@ -180,7 +180,7 @@
                         <div class="col-6">
                             <h1>Matthew Francisco</h1>
                             <h2>Best Man</h2>
-                            <p>Matt and I grew up togther as your typical brother duo, and I wouldn't have wanted it any other way. As the older one, I haven't always been the nicest bigger brother and we certainly don't always get along, but I always know he's got my back and will support me through thick and thin.</p>
+                            <p>Matt and I grew up as your typical brother tag team duo! Always hanging out together, always playing games together, always getting into trouble together... I haven't always been the nicest bigger brother, but even as we grew up and our personalities matured into who were are now, we're still there for each other (and we still play video games). I know Matt will support me through thick and thin — just as he's done when we were kids, as well as now, as my best man. </p>
                         </div>
                         <div class="col-4">
                             <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/matt.jpg">
@@ -192,7 +192,7 @@
                         <div class="col-6">
                             <h1>Keegan Griffee</h1>
                             <h2>Groomsman</h2>
-                            <p>Keegan and I first met in middle school, but our friendship only really flourished in high school as part of the "Goon squad". Keegan and our group of close buddies had countless gaming sessions in League of Legends, and as we went to college, we were freshman roommates, then housemates</p>
+                            <p>I first met Keegan in middle school, but I only knew him as the "french horn boy". Ironically, he knew <em>me</em> as the single "flute boy" of the band. But our friendship only really flourished in high school, where we both were a part of the tennis team, a number of classes, <em>some</em> study sessions, but mostly playing League of Legends every night after school. As we went to UW, we were freshman roommates, then housemates, where made we made great memories. I'm so glad he's one of my groomsmans!</p>
                         </div>
                         <div class="col-4">
                             <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/keegan.jpg">
@@ -204,7 +204,7 @@
                         <div class="col-6">
                             <h1>Neal Brown</h1>
                             <h2>Groomsman</h2>
-                            <p>I met Neal in high school and we started off playing Magic the Gathering together. We quickly became friends at the start of college, being the other housemates on our basement floor.</p>
+                            <p>Neal went to my high school where we initially met through playing Magic the Gathering (MTG)  and video games together. We quickly became friends starting up at UW, being the other housemate with Keegan and I on our renovated basement floor of our college house. We've made countless memories over the years through university, his own wedding, and continued game nights. Neal's been a down-to-earth yet comedic friend, and I always know he's got my back. As I like to say, out of all the Neal Brown's of the world, he's the Neal Browniest!</p>
                         </div>
                         <div class="col-4">
                             <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/neal.jpg">
