--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <div class="col-6">
                             <h1>Keegan Griffee</h1>
                             <h2>Groomsman</h2>
-                            <p>I first met Keegan in middle school, but I only knew him as the "french horn boy". Ironically, he knew <em>me</em> as the single "flute boy" of the band. But our friendship only really flourished in high school, where we both were a part of the tennis team, a number of classes, <em>some</em> study sessions, but mostly playing League of Legends every night after school. As we went to UW, we were freshman roommates, then housemates, where made we made great memories. I'm so glad he's one of my groomsmans!</p>
+                            <p>I first met Keegan in middle school, but I only knew him as the "french horn boy". Ironically, he knew <em>me</em> as the single "flute boy" of the band. But our friendship only really flourished in high school, where we both were a part of the tennis team, a number of classes, <em>some</em> study sessions, but mostly playing League of Legends every night after school. As we went to UW, we were freshman roommates, then housemates, where we made great memories. I'm so glad he's one of my groomsmen!</p>
                         </div>
                         <div class="col-4">
                             <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/keegan.jpg">
