Fix heading secondary issue

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="tab-pane fade" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Schedule</h1>
-                <img width="250px" src="/images/flower-boquet-transparent.png">
+                <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
                 <br>
                 <div class="row">
                     <div class="col-1"></div>
@@ -120,7 +120,7 @@
         <div class="tab-pane fade" id="nav-registry" role="tabpanel" aria-labelledby="nav-registry-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Registry</h1>
-                <img width="250px" src="/images/flower-boquet-transparent.png">
+                <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
                 <p>We're still putting together our registry list, but we appreciate you checking in!<br>Please stay tuned for more registry details. Thank you!</p>
                 <div class="row">
                     <div class="col-sm-6 col-md-4 col-xl-3 col-xxxl-2">
@@ -136,7 +136,7 @@
         <div class="tab-pane fade" id="nav-wedding-party" role="tabpanel" aria-labelledby="nav-wedding-party-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Wedding Party</h1>
-                <img width="250px" src="/images/flower-boquet-transparent.png">
+                <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
                 <div class="container">
                     <div class="row reveal">
                         <div class="col-1"></div>
@@ -217,7 +217,7 @@
         <div class="tab-pane fade" id="nav-photos" role="tabpanel" aria-labelledby="nav-photos-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Photos</h1>
-                <img width="250px" src="/images/flower-boquet-transparent.png">
+                <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
                 <div class="row">
                     <div class="col">
                         <a data-fslightbox href="/images/images-tab/1.JPG">
@@ -271,7 +271,7 @@
         <div class="tab-pane fade" id="nav-questions" role="tabpanel" aria-labelledby="nav-questions-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Questions</h1>
-                <img width="250px" src="/images/flower-boquet-transparent.png">
+                <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
                 <div class="row">
                     <div class="col-2"></div>
                     <div class="col-4 border-right"><span>When should I RSVP by?</span></div>
@@ -327,7 +327,7 @@
         <div class="tab-pane fade" id="nav-rsvp" role="tabpanel" aria-labelledby="nav-rsvp-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">RSVP</h1>
-                <img width="250px" src="/images/flower-boquet-transparent.png">
+                <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
                 <p>If you're responding for you and your family or a guest,<br>you'll be able to RSVP for your entire group.</p>
                 <div class="alert alert-info d-none" role="alert"></div>
                 <form class="form-inline centered">
